@@ -17,6 +17,7 @@
 package org.apache.solr.security;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -26,6 +27,7 @@ import java.util.Map;
 import javax.servlet.FilterChain;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import org.apache.http.HttpHeaders;
 import org.apache.http.HttpRequest;
 import org.apache.http.protocol.HttpContext;
 import org.apache.lucene.util.ResourceLoader;
@@ -59,6 +61,8 @@ public class MultiAuthPlugin extends AuthenticationPlugin
   private static final String UNKNOWN_SCHEME = "";
 
   private final Map<String, AuthenticationPlugin> pluginMap = new LinkedHashMap<>();
+  private final Map<String, String> realms = new LinkedHashMap<>();
+  private final List<String> WWWAuthenticateHeaders = new ArrayList<>();
   private final ResourceLoader loader;
   // the first of our plugins that allows anonymous requests
   private AuthenticationPlugin allowsUnknown = null;
@@ -141,6 +145,7 @@ public class MultiAuthPlugin extends AuthenticationPlugin
       }
       initPluginForScheme((Map<String, Object>) s);
     }
+    initWWWAuthenticateHeaders();
   }
 
   protected void initPluginForScheme(Map<String, Object> schemeMap) {
@@ -158,6 +163,11 @@ public class MultiAuthPlugin extends AuthenticationPlugin
           ErrorCode.SERVER_ERROR, "'class' is a required attribute: " + schemeMap);
     }
 
+    String realm = (String) schemeConfig.remove("realm");
+    if (!StrUtils.isNullOrEmpty(realm)) {
+      realms.put(scheme, realm);
+    }
+
     AuthenticationPlugin pluginForScheme = loader.newInstance(clazz, AuthenticationPlugin.class);
     pluginForScheme.init(schemeConfig);
     pluginMap.put(scheme.toLowerCase(Locale.ROOT), pluginForScheme);
@@ -168,6 +178,20 @@ public class MultiAuthPlugin extends AuthenticationPlugin
         // authorization header to it
         allowsUnknown = pluginForScheme;
       }
+    }
+  }
+
+  private void initWWWAuthenticateHeaders() {
+    for (String scheme : pluginMap.keySet()) {
+      String realm = realms.get(scheme);
+      String realmStr = realm == null ? "" : " realm=\"" + realm + "\"";
+      WWWAuthenticateHeaders.add(scheme + realmStr);
+    }
+  }
+
+  private void addWWWAuthenticateHeaders(HttpServletResponse response) {
+    for (String wwwAuthHeader : WWWAuthenticateHeaders) {
+      response.addHeader(HttpHeaders.WWW_AUTHENTICATE, wwwAuthHeader);
     }
   }
 
@@ -202,6 +226,7 @@ public class MultiAuthPlugin extends AuthenticationPlugin
         pluginInRequest.set(plugin);
         result = plugin.doAuthenticate(request, response, filterChain);
       } else {
+        addWWWAuthenticateHeaders(response);
         response.sendError(ErrorCode.UNAUTHORIZED.code, "No Authorization header");
       }
       return result;
@@ -210,6 +235,7 @@ public class MultiAuthPlugin extends AuthenticationPlugin
     final String scheme = getSchemeFromAuthHeader(authHeader);
     final AuthenticationPlugin plugin = pluginMap.get(scheme);
     if (plugin == null) {
+      addWWWAuthenticateHeaders(response);
       response.sendError(
           ErrorCode.UNAUTHORIZED.code, "Authorization scheme '" + scheme + "' not supported!");
       return false;
